# simple-ode-analyzer

./: CMakeLists.txt  README.md  build.sh  run.sh
app/: CMakeLists.txt  main.cpp
archive/: CMakeLists.txt  ode_oscillation_gravitational.cpp  ode_oscillation_gravitational.h  ode_oscillation_harmonic_electromagnetic.cpp  ode_oscillation_harmonic_mechanical.h  ode_variants.h
include/diffeq/: ode.h  plotter.h
include/diffeq/app/: app.h  main.h
include/diffeq/common/: events.h  settings.h
include/diffeq/controls/: controls.h  controls_panel.h
include/diffeq/controls/ode/: controls_choose.h  controls_ode.h  entry_dialog.h  ode.h  ode_entry.h
include/diffeq/controls/ode/ode_chooser/: controls_choose.h  ode_entry.h
include/diffeq/controls/ode/ode_chooser/ode_variants/: ode_function.h  ode_oscillation_harmonic.h  ode_variants.h
include/diffeq/controls/ode/ode_variants/: ode_function.h  ode_harmonic.h  ode_oscillation_gravitational.h  ode_oscillation_harmonic.h  ode_oscillation_harmonic_electomagnetic.h  ode_oscillation_harmonic_electromagnetic.h  ode_oscillation_harmonic_mechanical.h  ode_oscillation_pendulum.h  ode_oscillation_swing.h  ode_v_oscillation.h  ode_variants.h
include/diffeq/controls/ode/specialized_options/: controls_specialized.h
include/diffeq/controls/view/: controls_view.h
include/diffeq/plotter/: plotter.h
include/diffeq/plotter/ode/: ode.h
src/: CMakeLists.txt  main.c  ode.c  plotter.c
src/app/: app.cpp  main.cpp
src/common/: CMakeLists.txt  events.cpp
src/controls/: CMakeLists.txt  controls.cpp  controls_panel.cpp
src/controls/ode/: CMakeLists.txt  controls_choose.cpp  controls_ode.cpp  entry_dialog.cpp  ode.cpp  ode_entry.cpp
src/controls/ode/ode_chooser/: CMakeLists.txt  controls_choose.cpp  ode_entry.cpp
src/controls/ode/ode_chooser/ode_special/: CMakeLists.txt
src/controls/ode/ode_chooser/ode_variants/: CMakeLists.txt  ode_function.cpp  ode_oscillation_gravitational.cpp  ode_oscillation_harmonic.cpp  ode_oscillation_harmonic_electromagnetic.cpp  ode_oscillation_harmonic_mechanical.cpp  ode_oscillation_pendulum.cpp
src/controls/ode/ode_variants/: CMakeLists.txt  ode_function.cpp  ode_harmonic.cpp  ode_oscillation_gravitational.cpp  ode_oscillation_harmonic.cpp  ode_oscillation_harmonic_electromagnetic.cpp  ode_oscillation_harmonic_mechanical.cpp  ode_oscillation_pendulum.cpp  ode_oscillation_swing.cpp  ode_v_oscillation.cpp
src/controls/ode/specialized_options/: CMakeLists.txt  controls_specialized.cpp
src/controls/view/: CMakeLists.txt  controls_view.cpp
src/ode/: CMakeLists.txt
src/plotter/: CMakeLists.txt  plotter.cpp
src/plotter/ode/: CMakeLists.txt  ode.cpp
src/plotter/ode/ode_variants/: ode_harmonic.cpp
